feat: 레벨 5 - 채팅 조회, 저장 메서드